--- a/shopsBackend/pom.xml
+++ b/shopsBackend/pom.xml
@@ -77,6 +77,11 @@
                     </resources>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.sonarsource.scanner.maven</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>3.5.0.1254</version>
+            </plugin>
         </plugins>
     </build>
 
